# weekly-assignment-1-tyvan266

./: README.md  cabal.project  cabal.project.freeze  w01.cabal
.devcontainer/: Dockerfile  devcontainer.json
doctest/: doctests.hs
src/: W0103.hs
test/: Spec.hs  W0101Spec.hs  W0102Spec.hs  W0103Spec.hs  W0104Spec.hs  W0107Spec.hs
