cabal-version:       3.4
name:                w01
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

common common
  build-depends:       base ^>= 4.16.4.0
  ghc-options:         -Wall

library
  import:               common
  hs-source-dirs:       src
  Exposed-Modules:      W0101
                      , W0102
                      , W0103
                      , W0104
                      , W0107
  build-depends:        array
                      , containers
  default-language:     Haskell2010
  ghc-options:          -Wall

executable w0106
  import:              common
  hs-source-dirs:      app
  main-is:             W0106.hs

test-Suite w01-tests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  other-modules:        W0101Spec
                      , W0102Spec
                      , W0103Spec
                      , W0104Spec
                      , W0107Spec
  Build-Depends:        hspec
                      , QuickCheck
                      , w01
  build-tool-depends:   hspec-discover:hspec-discover

test-suite w01-doctests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:        doctest       
                      , template-haskell
  hs-source-dirs:       doctest
  ghc-options:          -threaded
